Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,21 +36,22 @@ steps:
     commandOptions: '-detailed-exitcode'
     environmentServiceNameAzureRM: '$(subscription)'
 
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'Visual Studio Enterprise(17b12858-3960-4e6f-a663-a06fdae23428)'
-    scriptType: 'pscore'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      # terraform plan -detailed-exitcode
-      Write-Host "LASTEXITCODE : $LASTEXITCODE"
-    workingDirectory: '$(System.DefaultWorkingDirectory)/skip-step'
+# - task: AzureCLI@2
+#   inputs:
+#     azureSubscription: 'Visual Studio Enterprise(17b12858-3960-4e6f-a663-a06fdae23428)'
+#     scriptType: 'pscore'
+#     scriptLocation: 'inlineScript'
+#     inlineScript: |
+#       # terraform plan -detailed-exitcode
+#       Write-Host "LASTEXITCODE : $LASTEXITCODE"
+#     workingDirectory: '$(System.DefaultWorkingDirectory)/skip-step'
 
 - task: PowerShell@2
   inputs:
     workingDirectory: '$(System.DefaultWorkingDirectory)/skip-step'
     targetType: 'inline'
     script: |
+      terraform show -json
       terraform plan -detailed-exitcode
       Write-Host "LASTEXITCODE : $LASTEXITCODE"
 
