--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,11 +46,10 @@ steps:
       Write-Host "LASTEXITCODE : $LASTEXITCODE"
       $plan = $(terraform show -json tfplan | ConvertFrom-Json)
       $actions = $plan.resource_changes.change.actions
-      Write-Host $actions
+      Write-Host "Terraform actions : $actions"
       if (($actions -contains 'create') -or ($actions -contains 'delete') -or ($actions -contains 'update'))
       {
-        Write-Host "TF will either create, delete or update a resource"
-        # $(anyTfChanges)=true
+        Write-Host "TF will perform the following actions : $actions"
         Write-Host $(anyTfChanges)
       }
 
