Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
-trigger:
-- master
+# trigger:
+# - master
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -15,9 +15,9 @@ variables:
 steps:
 
 - task: TerraformInstaller@0
-  displayName: install Terraform v0.12.26
+  displayName: install Terraform v0.12.28
   inputs:
-    terraformVersion: '0.12.26'
+    terraformVersion: '0.12.28'
 
 - task: TerraformTaskV1@0
   displayName: terraform init
